<resources>
    <string name="app_name">MyCalculator</string>


          <string name="action_settings">Settings</string>
                <string name="sin">sin</string>
        <string name="cos">cos</string>
        <string name="tan">tan</string>
        <string name="pi">╥</string>
        <string name="factorial">!</string>
        <string name="ln">ln</string>
        <string name="log">log</string>
        <string name="e">e</string>
        <string name="square">^</string>
        <string name="root">√</string>
        <string name="seven">7</string>
        <string name="eight">8</string>
        <string name="split">/</string>
        <string name="duzka1">(</string>
        <string name="nine">9</string>
        <string name="duzka2">)</string>
        <string name="multiple">*</string>
        <string name="six">6</string>
        <string name="five">5</string>
        <string name="four">4</string>
        <string name="one">1</string>
        <string name="two">2</string>
        <string name="three">3</string>
        <string name="minus">-</string>
        <string name="zero">0</string>
        <string name="point">.</string>
        <string name="plus">+</string>
        <string name="equals">=</string>



</resources>
