<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainScreen"
        android:background="#212121"
        >


        <LinearLayout
            android:id="@+id/green"
            android:background="#212121"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:weightSum="56"
            android:layout_marginBottom="@dimen/greenMargin"
            android:layout_marginTop="@dimen/greenMargin"

            >

            <EditText
                android:gravity="right"
                android:textSize="35sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:layout_gravity="center_vertical"
                android:focusable="false"
                android:textColor="#fff"
                android:layout_weight="55"
                android:singleLine="true"
                />

            <Button
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="X"
                android:textSize="@dimen/clear"
                android:onClick="onClick"
                android:id="@+id/button7" />
        </LinearLayout>




            <LinearLayout
                android:id="@+id/grey"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"

                android:background="#212121">

                <LinearLayout
                    android:id="@+id/sevenEight"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <Button
                        android:onClick="onClick"
                        style="@style/calcul3"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/seven"

                        android:id="@+id/seven" />
                    <Button
                        android:onClick="onClick"
                        style="@style/calcul3"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/eight"
                        android:id="@+id/eight" />
                    <Button
                        android:onClick="onClick"
                        android:layout_weight="1"
                        style="@style/calcul3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/nine"
                        android:id="@+id/nine" />
                    <Button
                        android:onClick="onClick"
                        android:layout_weight="1"
                        style="@style/calcul2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/split"
                        android:id="@+id/split" />
                    <Button
                        android:onClick="onClick"
                        style="@style/calcul2"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/duzka1"
                        android:id="@+id/duzka1" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fourFive"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <Button
                        android:onClick="onClick"
                        style="@style/calcul3"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/four"
                        android:id="@+id/four" />
                    <Button
                        android:onClick="onClick"
                        style="@style/calcul3"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/five"
                        android:id="@+id/five" />
                    <Button
                        android:onClick="onClick"
                        android:layout_weight="1"
                        style="@style/calcul3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/six"
                        android:id="@+id/six" />
                    <Button
                        android:onClick="onClick"
                        android:layout_weight="1"
                        style="@style/calcul2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/multiple"
                        android:id="@+id/multiple" />
                    <Button
                        android:onClick="onClick"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/duzka2"
                        style="@style/calcul2"
                        android:id="@+id/duzka2" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:id="@+id/comboCombo"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/comboOneZero"
                        android:layout_weight="4"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                        <LinearLayout
                            android:id="@+id/oneTwoThree"
                            android:layout_weight="1"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="0dp">
                            <Button
                                android:onClick="onClick"
                                style="@style/calcul3"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:text="@string/one"
                                android:id="@+id/one" />
                            <Button
                                android:onClick="onClick"
                                style="@style/calcul3"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:text="@string/two"
                                android:id="@+id/two" />
                            <Button
                                android:onClick="onClick"
                                style="@style/calcul3"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:text="@string/three"
                                android:id="@+id/three" />
                            <Button
                                android:onClick="onClick"
                                style="@style/calcul2"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:text="@string/minus"
                                android:id="@+id/minus" />

                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/zeroPoint"
                            android:layout_weight="1"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"

                            >

                            <Button
                                android:layout_weight="2.06"
                                android:onClick="onClick"
                                style="@style/calcul4"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:text="@string/zero"
                                android:id="@+id/zero" />

                            <Button

                                style="@style/calcul3"
                                android:onClick="onClick"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:text="@string/point"
                                android:id="@+id/point" />

                            <Button
                                android:onClick="onClick"
                                style="@style/calcul2"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:text="@string/plus"
                                android:id="@+id/plus" />

                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout

                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                        <Button
                            android:onClick="onClick"
                            style="@style/calcul2"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/equals"
                            android:id="@+id/equals" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>




